* Add support for ?at=<time> query param on all /tenant, /entity,   /traversal, /sync and /bulk endpoints * Add support for /history on /entity and /tenant * Update Swagger docs with new REST params and endpoints * Added stubs for to be implemented itests
